compiler/tests/compiler/must_fail/t_10.mil.exp.err
tests/compiler/must_fail/t_10.mil:2:3: 2:11 error: arity of return value does not match type, got 1, expected 0
  return x;
  ^^^^^^^^^
